--- a/src/app/features/movies/components/category/category.component.html
+++ b/src/app/features/movies/components/category/category.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-3">
+<div class="col-md-3 panel">
   <mat-card>
     <mat-card-title-group>
       <mat-card-title class="text-xl push-none">{{
