--- a/src/app/features/movies/containers/categories-list/categories-list.component.html
+++ b/src/app/features/movies/containers/categories-list/categories-list.component.html
@@ -1,27 +1,36 @@
-<div class="row">
-  <div class="col-md-2 col-md-offset-4">
-    <app-search
-      [searchValue]="searchValue$ | async"
-      (search)="search($event)"
-    ></app-search>
+<app-wrapper>
+  <div class="row">
+    <div class="col-md-2 col-md-offset-4">
+      <app-search
+        [searchName]="'search category'"
+        [searchValue]="searchValue$ | async"
+        (search)="search($event)"
+      ></app-search>
+    </div>
   </div>
-</div>
-<ng-container class="row" *ngIf="!(loading$ | async); else loader">
-  <div class="col-md-offset-0">
-    <app-category
-      (goToMovies)="goToMovies($event)"
-      *ngFor="
-        let category of categories$ | async | titleCategoriesFilter: searchValue
-      "
-      [category]="category"
-    ></app-category>
+  <div class="row" *ngIf="categories$ | async as categories">
+    <div class="col-md-offset-0">
+      <ng-container
+        *ngIf="
+          !(loadingCategories$ | async) && !(loadingMovies$ | async);
+          else loader
+        "
+      >
+        <app-category
+          (goToMovies)="goToMovies($event)"
+          *ngFor="
+            let category of categories | titleCategoriesFilter: searchValue
+          "
+          [category]="category"
+        ></app-category>
+      </ng-container>
+    </div>
   </div>
-</ng-container>
-
-<ng-template class="row" #loader>
-  <div class="col-md-2 col-md-offset-4">
-    <mat-icon
-      ><mat-spinner color="primary" diameter="80"> </mat-spinner
-    ></mat-icon>
+  <div class="row">
+    <ng-template #loader>
+      <mat-icon class="col-md-2 col-md-offset-4"
+        ><mat-spinner color="primary" diameter="80"> </mat-spinner
+      ></mat-icon>
+    </ng-template>
   </div>
-</ng-template>
+</app-wrapper>
