--- a/src/app/features/movies/components/movie/movie.component.html
+++ b/src/app/features/movies/components/movie/movie.component.html
@@ -8,7 +8,7 @@
       ></div>
 
       <mat-card-title>{{ movie.title }}</mat-card-title>
-      <mat-card-subtitle>{{ movie.RecordedYear }}</mat-card-subtitle>
+      <mat-card-subtitle>{{ movie.recordedYear }}</mat-card-subtitle>
       <mat-card-subtitle> {{ movie.language }}</mat-card-subtitle>
     </mat-card-header>
 
