--- a/src/app/features/movies/components/select/select.component.html
+++ b/src/app/features/movies/components/select/select.component.html
@@ -1,7 +1,7 @@
 <mat-form-field
   [formGroup]="registerMovieForm"
   class="form-element"
-  appearance="fill"
+  appearance="outline"
 >
   <mat-label>{{ label }}</mat-label>
   <mat-select [formControlName]="control">
