--- a/src/app/features/movies/containers/template/template.component.html
+++ b/src/app/features/movies/containers/template/template.component.html
@@ -1,20 +1,44 @@
-<!-- Navigation -->
-<!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
-<div class="collapse navbar-collapse navbar-ex1-collapse">
-  <ul class="nav navbar-nav side-nav">
-    <li>
-      <a routerLink="/">Home<mat-icon>home</mat-icon></a>
-    </li>
-    <li>
-      <a routerLink="/movies"
-        >Categories movies<mat-icon>local_movies</mat-icon></a
+<mat-drawer-container>
+  <mat-drawer
+    #snav
+    [mode]="mobileQuery.matches ? 'over' : 'side'"
+    [opened]="!mobileQuery.matches"
+    [ngClass]="{ 'sidenav-collapsed': collapsedNav && !mobileQuery.matches }"
+  >
+    <div class="sidenav-header">
+      <span>{{ collapsedNav && !mobileQuery.matches ? "M" : "Movies" }}</span>
+    </div>
+    <ul>
+      <li>
+        <a routerLink="/">Home<mat-icon>home</mat-icon></a>
+      </li>
+      <li>
+        <a routerLink="/movies"
+          >Categories movies<mat-icon>local_movies</mat-icon></a
+        >
+      </li>
+      <li>
+        <a routerLink="/movies/addMovie"
+          >Add movie<mat-icon>movie_creation</mat-icon></a
+        >
+      </li>
+    </ul>
+  </mat-drawer>
+  <mat-drawer-content
+    [ngClass]="{ 'sidenav-collapsed': collapsedNav && !mobileQuery.matches }"
+  >
+    <mat-toolbar>
+      <button
+        mat-icon-button
+        (click)="
+          mobileQuery.matches ? snav.toggle() : (collapsedNav = !collapsedNav)
+        "
       >
-    </li>
-    <li>
-      <a routerLink="/movies/addMovie"
-        >Add movie<mat-icon>movie_creation</mat-icon></a
-      >
-    </li>
-  </ul>
-</div>
-<!-- /.navbar-collapse -->
+        <mat-icon>menu</mat-icon>
+      </button>
+    </mat-toolbar>
+    <mat-card>
+      <ng-content></ng-content>
+    </mat-card>
+  </mat-drawer-content>
+</mat-drawer-container>
