--- a/src/app/features/movies/containers/movies-list/movies-list.component.html
+++ b/src/app/features/movies/containers/movies-list/movies-list.component.html
@@ -1,48 +1,47 @@
-<app-template>
-  <div class="row">
+<div class="row">
+  <div class="col-md-2 col-centered">
+    <app-search
+      [searchName]="'search movie'"
+      [searchValue]="searchValue$ | async"
+      (search)="search($event)"
+    ></app-search>
+  </div>
+</div>
+<div class="row" *ngIf="movies$ | async as movies">
+  <div
+    *ngIf="
+      !(loadingCategories$ | async) && !(loadingMovies$ | async);
+      else loader
+    "
+  >
+    <ng-container *ngIf="movies.length > 0; else noMovie">
+      <app-movie
+        *ngFor="let movie of obs | async | titleMoviesFilter: searchValue"
+        [movie]="movie"
+        (updateMovie)="onUpdateMovie($event)"
+        (deleteMovie)="onDeleteMovie($event)"
+        (detailsMovie)="onDetailsMovie($event)"
+      ></app-movie>
+    </ng-container>
+  </div>
+</div>
+<div class="row" *ngIf="loadingAction$ | async">
+  <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+</div>
+<div class="row">
+  <mat-paginator [pageSizeOptions]="[5, 10, 25]"></mat-paginator>
+</div>
+<div class="row">
+  <ng-template #loader>
     <div class="col-md-2 col-centered">
-      <app-search
-        [searchName]="'search movie'"
-        [searchValue]="searchValue$ | async"
-        (search)="search($event)"
-      ></app-search>
+      <mat-spinner color="primary" diameter="80"> </mat-spinner>
     </div>
-  </div>
-  <div class="row" *ngIf="movies$ | async as movies">
-    <div
-      *ngIf="
-        !(loadingCategories$ | async) && !(loadingMovies$ | async);
-        else loader
-      "
-    >
-      <ng-container *ngIf="movies.length > 0; else noMovie">
-        <app-movie
-          *ngFor="let movie of obs | async | titleMoviesFilter: searchValue"
-          [movie]="movie"
-          (updateMovie)="onUpdateMovie($event)"
-          (deleteMovie)="onDeleteMovie($event)"
-        ></app-movie>
-      </ng-container>
+  </ng-template>
+</div>
+<div class="row">
+  <ng-template #noMovie>
+    <div class="col-md-2 col-centered">
+      <p>No movie is associated with this category</p>
     </div>
-  </div>
-  <div class="row">
-    <mat-paginator [pageSizeOptions]="[5, 10, 25]"></mat-paginator>
-  </div>
-  <div class="row">
-    <ng-template #loader>
-      <div class="col-md-2 col-centered">
-        <mat-spinner color="primary" diameter="80"> </mat-spinner>
-      </div>
-    </ng-template>
-  </div>
-  <div class="row">
-    <ng-template #noMovie>
-      <div class="col-md-2 col-centered">
-        <p>No movie is associated with this category</p>
-      </div>
-    </ng-template>
-  </div>
-  <div class="row" *ngIf="loadingAction$ | async">
-    <mat-progress-bar mode="indeterminate"></mat-progress-bar>
-  </div>
-</app-template>
+  </ng-template>
+</div>
