--- a/src/app/features/movies/containers/template/template.component.css
+++ b/src/app/features/movies/containers/template/template.component.css
@@ -58,9 +58,8 @@ mat-drawer-content {
 mat-drawer-content.sidenav-collapsed {
   margin-left: 100px !important;
 }
-mat-card {
-  margin: 10px;
-  background-color: #f5f5f5 !important;
+.container-fluid {
+  background-color: #f5f5f5;
 }
 
 @media (max-width: 600px) {
