--- a/src/app/features/movies/components/category-preview/category-preview.component.html
+++ b/src/app/features/movies/components/category-preview/category-preview.component.html
@@ -1,14 +1,14 @@
 <div class="col-md-3 panel">
   <mat-card>
     <mat-card-title-group>
-      <mat-card-title class="text-xl push-none">{{
+      <mat-card-title class="text-xl push-none" data-role="category-title">{{
         category.title
       }}</mat-card-title>
-      <mat-card-subtitle class="push-none">{{
+      <mat-card-subtitle class="push-none" data-role="category-emoji">{{
         category.emoji
       }}</mat-card-subtitle>
-      <mat-card-subtitle class="push-none">
-        {{ category.emojiStyle }}
+      <mat-card-subtitle class="push-none" data-role="category-emojiStyle"
+        >{{ category.emojiStyle }}
       </mat-card-subtitle>
     </mat-card-title-group>
     <mat-card-actions>
