--- a/src/app/features/workspace/components/panel/panel.component.html
+++ b/src/app/features/workspace/components/panel/panel.component.html
@@ -7,6 +7,7 @@
           <img
             class="product_listing_img img-responsive"
             src="{{ panel.image }}"
+            style="height: 200px"
           />
         </div>
       </div>
