create shared module

--- a/src/app/features/carrousel/containers/template/template.component.html
+++ b/src/app/features/carrousel/containers/template/template.component.html
@@ -6,7 +6,9 @@
     [ngClass]="{ 'sidenav-collapsed': collapsedNav && !mobileQuery.matches }"
   >
     <div class="sidenav-header">
-      <span>{{ collapsedNav && !mobileQuery.matches ? "M" : "Movies" }}</span>
+      <span>{{
+        collapsedNav && !mobileQuery.matches ? "S" : "Slideshow"
+      }}</span>
     </div>
     <ul>
       <li>
