--- a/src/app/features/carrousel/containers/template/template.component.html
+++ b/src/app/features/carrousel/containers/template/template.component.html
@@ -15,8 +15,13 @@
         <a routerLink="/">Home<mat-icon>home</mat-icon></a>
       </li>
       <li>
-        <a routerLink="/slides"
+        <a routerLink="/carrousel"
           >Slides by profile<mat-icon>slideshow</mat-icon></a
+        >
+      </li>
+      <li>
+        <a routerLink="/carrousel/add-slide"
+          >Add slide<mat-icon>add_to_queue</mat-icon></a
         >
       </li>
     </ul>
