--- a/src/app/features/movies/components/category-preview/category-preview.component.html
+++ b/src/app/features/movies/components/category-preview/category-preview.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-3 panel">
+<div class="col-md-3">
   <mat-card>
     <mat-card-title-group>
       <mat-card-title class="text-xl push-none" data-role="category-title">{{
