--- a/src/app/features/movies/components/form-movie/form-movie.component.html
+++ b/src/app/features/movies/components/form-movie/form-movie.component.html
@@ -19,7 +19,7 @@
       [options]="optionsLanguage"
       [valid]="f.language.valid"
       [touched]="f.language.touched"
-      [registerMovieForm]="registerMovieForm"
+      [registerForm]="registerMovieForm"
       [control]="'language'"
       [titleAlert]="titleAlert"
     ></app-select>
@@ -28,7 +28,7 @@
       [options]="optionsYear"
       [valid]="f.recordedYear.valid"
       [touched]="f.recordedYear.touched"
-      [registerMovieForm]="registerMovieForm"
+      [registerForm]="registerMovieForm"
       [control]="'recordedYear'"
       [titleAlert]="titleAlert"
     ></app-select>
@@ -37,7 +37,7 @@
       [options]="optionsCategories"
       [valid]="f.category.valid"
       [touched]="f.category.touched"
-      [registerMovieForm]="registerMovieForm"
+      [registerForm]="registerMovieForm"
       [control]="'category'"
       [titleAlert]="titleAlert"
     ></app-select-tab-object>
