--- a/src/app/features/carrousel/components/slide-drag-and-drop/slide-drag-and-drop.component.css
+++ b/src/app/features/carrousel/components/slide-drag-and-drop/slide-drag-and-drop.component.css
@@ -20,8 +20,7 @@
 .cdk-drag-preview {
   box-sizing: border-box;
   border-radius: 4px;
-  box-shadow: 0 5px 5px -3px #3f51b5, 0 8px 10px 1px #3f51b5,
-    0 3px 14px 2px #3f51b5;
+  box-shadow: 0 5px 5px -3px black, 0 8px 10px 1px black, 0 3px 14px 2px black;
 }
 
 .cdk-drag-placeholder {
@@ -36,10 +35,6 @@
   width: 10%;
 }
 
-.w-50 {
-  width: 20px;
-  height: 20px;
-}
 .w-100 {
   width: 100%;
 }
@@ -59,15 +54,16 @@
   font-weight: 500;
   padding: 15px;
 }
-.alert-text {
-  color: #3f51b5;
-  font-weight: 600;
-  font-family: cursive;
-  font-size: 18px;
-  text-align: center;
-}
 
 .col-md-4 {
   margin-left: 400px;
   max-height: 80px;
+}
+
+.slide-on {
+  color: green;
+}
+
+.slide-off {
+  color: red;
 }
