--- a/src/app/features/movies/containers/movies-list/movies-list.component.html
+++ b/src/app/features/movies/containers/movies-list/movies-list.component.html
@@ -29,7 +29,7 @@
   <mat-progress-bar mode="indeterminate"></mat-progress-bar>
 </div>
 <div class="row">
-  <mat-paginator [pageSizeOptions]="[5, 10, 25]"></mat-paginator>
+  <mat-paginator [pageSizeOptions]="[6, 9, 12, 18]"></mat-paginator>
 </div>
 <div class="row">
   <ng-template #loader>
