--- a/src/app/features/movies/components/form-movie/form-movie.component.html
+++ b/src/app/features/movies/components/form-movie/form-movie.component.html
@@ -15,7 +15,7 @@
       >
     </mat-form-field>
     <app-select
-      [label]="labelLanguage"
+      [label]="'Language'"
       [options]="optionsLanguage"
       [valid]="f.language.valid"
       [touched]="f.language.touched"
@@ -24,7 +24,7 @@
       [titleAlert]="titleAlert"
     ></app-select>
     <app-select
-      [label]="labelYear"
+      [label]="'Year'"
       [options]="optionsYear"
       [valid]="f.recordedYear.valid"
       [touched]="f.recordedYear.touched"
@@ -33,7 +33,7 @@
       [titleAlert]="titleAlert"
     ></app-select>
     <app-select-tab-object
-      [label]="labelCategory"
+      [label]="'Category'"
       [options]="optionsCategories"
       [valid]="f.category.valid"
       [touched]="f.category.touched"
