--- a/src/app/features/carrousel/components/form-slide/form-slide.component.html
+++ b/src/app/features/carrousel/components/form-slide/form-slide.component.html
@@ -28,15 +28,15 @@
       </mat-error>
     </mat-form-field>
 
-    <!--      <app-select-tab-object
-        [label]="labelCategory"
-        [options]="optionsCategories"
-        [valid]="f.category.valid"
-        [touched]="f.category.touched"
-        [registerForm]="registerMovieForm"
-        [control]="'category'"
-        [titleAlert]="titleAlert"
-      ></app-select-tab-object> -->
+    <app-select-multiple
+      [label]="'profiles'"
+      [profiles]="profiles"
+      [valid]="f.profiles.valid"
+      [touched]="f.profiles.touched"
+      [registerForm]="registerSlideForm"
+      [control]="'profiles'"
+      [titleAlert]="titleAlert"
+    ></app-select-multiple>
 
     <mat-form-field class="form-element" appearance="outline">
       <input
@@ -66,9 +66,9 @@
     <div class="form-element" appearance="outline">
       <mat-slide-toggle
         formControlName="visible"
-        (change)="OnOf($event)"
+        (change)="OnOf()"
         class="example-margin"
-        [color]="'accent'"
+        [color]="'primary'"
       >
         {{ etatSlide }}
       </mat-slide-toggle>
